--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,11 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vite": "^5.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
-    "sass": "^1.77.6",
-    "vite": "^5.3.1"
+    "sass": "^1.77.6"
   }
 }
