--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,13 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "mermaid": "^10.9.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0",
-    "vite": "^5.3.1"
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "vite": "^5.3.1"
   }
 }
