--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume-webserver-spa",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,9 +12,13 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "d3": "^7.9.0",
     "mermaid": "^10.9.1",
+    "pdfjs-dist": "^4.4.168",
+    "ramda": "^0.30.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vue-showdown": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
