Fix the build context

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -18,7 +18,7 @@
          name: Build and publish on ECR
          run: |
            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 434190342226.dkr.ecr.us-east-1.amazonaws.com
-           docker buildx build web -f build/Dockerfile -t resume-webserver/webserver
+           docker buildx build . -f build/Dockerfile -t resume-webserver/webserver
            docker tag resume-webserver/webserver:latest 434190342226.dkr.ecr.us-east-1.amazonaws.com/resume-webserver/webserver:latest
            docker push 434190342226.dkr.ecr.us-east-1.amazonaws.com/resume-webserver/webserver:latest
 
