--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,24 +1,24 @@
- name: Release new version
+name: Release new version
 
- on: push
-   #  pull_request:
-   #    branches:
-   #      - main
-   #    types:
-   #      - closed
+on:
+  pull_request:
+    branches:
+      - main
+    types:
+      - closed
 
- jobs:
-   build-and-release:
-     runs-on: self-hosted
-     name: Build and release app
-     steps:
-       - uses: actions/checkout@v3
+jobs:
+  build-and-release:
+    runs-on: self-hosted
+    name: Build and release app
+    steps:
+      - uses: actions/checkout@v3
 
-       - id: docker-build-and-push
-         name: Build and publish on ECR
-         run: |
-           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 434190342226.dkr.ecr.us-east-1.amazonaws.com
-           docker buildx build . -f build/Dockerfile -t resume-webserver/webserver
-           docker tag resume-webserver/webserver:latest 434190342226.dkr.ecr.us-east-1.amazonaws.com/resume-webserver/webserver:latest
-           docker push 434190342226.dkr.ecr.us-east-1.amazonaws.com/resume-webserver/webserver:latest
+      - id: docker-build-and-push
+        name: Build and publish on ECR
+        run: |
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 434190342226.dkr.ecr.us-east-1.amazonaws.com
+          docker buildx build . -f build/Dockerfile -t resume-webserver/webserver
+          docker tag resume-webserver/webserver:latest 434190342226.dkr.ecr.us-east-1.amazonaws.com/resume-webserver/webserver:latest
+          docker push 434190342226.dkr.ecr.us-east-1.amazonaws.com/resume-webserver/webserver:latest
 
