--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "d3": "^7.9.0",
     "mermaid": "^10.9.1",
     "pdfjs-dist": "^4.4.168",
+    "pinia": "^2.1.7",
     "primevue": "^4.0.0",
     "ramda": "^0.30.1",
     "vue": "^3.4.29",
